--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "KIANpro/KIAN",
+    "name": "kianpro/kian",
     "description": "ACADEMY script built on Laravel 5.8 and React JS 16.4",
     "keywords": ["ACADEMY", "learning-management-system", "laravel", "reactjs"],
     "homepage": "https://www.ULEARNpro.com",
